--- a/src/index.html
+++ b/src/index.html
@@ -12,15 +12,16 @@
     <!-- run `gulp inject` to automatically populate bower styles dependencies -->
     <link  rel="stylesheet" type="text/css" href="/bower_components/angular-chosen-localytics/chosen-spinner.css">
     <link  rel="stylesheet" type="text/css" href="/bower_components/chosen/chosen.min.css">
-
+    <link rel="stylesheet" href="bower_components/angular-chart.js/dist/angular-chart.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
     <!-- build:css({.tmp/serve,src}) styles/app.css -->
     <!-- inject:css -->
     <!-- css files will be automatically insert here -->
-     <link  rel="stylesheet" type="text/css" href="/bower_components/angular-chosen-localytics/chosen-spinner.css">
-         <link  rel="stylesheet" type="text/css" href="/bower_components/chosen/chosen.min.css">
+    <link  rel="stylesheet" type="text/css" href="/bower_components/angular-chosen-localytics/chosen-spinner.css">
+    <link  rel="stylesheet" type="text/css" href="/bower_components/chosen/chosen.min.css">
+    <link rel="stylesheet" href="bower_components/angular-chart.js/dist/angular-chart.css" />
 
     <!-- endinject -->
     <!-- endbuild -->
