--- a/src/index.html
+++ b/src/index.html
@@ -39,12 +39,16 @@
     <!-- endbower -->
     <script src="/bower_components/chosen/chosen.jquery.js" type="text/javascript" charset="utf-8"></script>
     <script src="/bower_components/angular-chosen-localytics/chosen.js" type="text/javascript" charset="utf-8"></script>
+    <script src="bower_components/lodash-compat/lodash.js"></script>
+    <script src="bower_components/ng-lodash/build/ng-lodash.js"></script>
     <!-- endbuild -->
 
     <!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
     <!-- inject:js -->
       <script src="/bower_components/chosen/chosen.jquery.js" type="text/javascript" charset="utf-8"></script>
     <script src="/bower_components/angular-chosen-localytics/chosen.js" type="text/javascript" charset="utf-8"></script>
+    <script src="bower_components/lodash-compat/lodash.js"></script>
+    <script src="bower_components/ng-lodash/build/ng-lodash.js"></script>
     <!-- js files will be automatically insert here -->
     <!-- endinject -->
 
